# codeLens--QA

./: INDEXING_FLOW.md  LICENSE  PROJECT_SUMMARY.md  README.md  USAGE_GUIDE.md  WALKTHROUGH.md  index.json  pyproject.toml  result.json  start_server.sh
examples/: demo_queries.txt
examples/sample_repo/: data_loader.py  main.py  utils.py
notebooks/: quick_demo.ipynb
src/codelens/: ast_indexer.py  cli.py  graph_builder.py  llm.py  prompt_templates.py  query_pipeline.py  retriever.py  utils.py
src/codelens_qa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/web/: app.py
src/web/static/: index.html
