[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codelens-qa"
version = "0.1.0"
description = "LLM-augmented repo explorer"
authors = [{name = "Antigravity", email = "antigravity@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "watchfiles>=0.20.0",
    "numpy",
    "pandas",
    "openai",
    "tiktoken",
    "rich"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
huggingface = ["huggingface-hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
